Add partitioned data generation (#144)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,9 @@ module = [
   "modin.*",
   "plotly.*",
   "cudf_polars.*",
-  "cudf.*"
+  "cudf.*",
+  "rmm.*",
+  "pylibcudf.*",
 ]
 ignore_missing_imports = true
 
