--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ attrs==25.3.0
     # via
     #   jsonschema
     #   referencing
-certifi==2025.1.31
+certifi==2025.4.26
     # via requests
 charset-normalizer==3.4.1
     # via requests
@@ -18,31 +18,31 @@ click==8.1.8
     #   ray
 cloudpickle==3.1.1
     # via dask
-contourpy==1.3.1
+contourpy==1.3.2
     # via matplotlib
-cramjam==2.9.1
+cramjam==2.10.0
     # via fastparquet
 cycler==0.12.1
     # via matplotlib
-dask==2025.3.0
+dask==2025.4.1
     # via
     #   -r requirements.in
     #   dask-expr
 dask-expr==2.0.0
     # via -r requirements.in
-duckdb==1.2.1
+duckdb==1.2.2
     # via -r requirements.in
 fastparquet==2024.11.0
     # via -r requirements.in
 filelock==3.18.0
     # via ray
-fonttools==4.56.0
+fonttools==4.57.0
     # via matplotlib
-frozenlist==1.5.0
+frozenlist==1.6.0
     # via
     #   aiosignal
     #   ray
-fsspec==2025.3.0
+fsspec==2025.3.2
     # via
     #   dask
     #   fastparquet
@@ -53,7 +53,7 @@ importlib-metadata==8.6.1
     # via dask
 jsonschema==4.23.0
     # via ray
-jsonschema-specifications==2024.10.1
+jsonschema-specifications==2025.4.1
     # via jsonschema
 kiwisolver==1.4.8
     # via matplotlib
@@ -63,15 +63,15 @@ locket==1.0.0
     # via partd
 matplotlib==3.10.1
     # via plotnine
-mizani==0.13.1
+mizani==0.13.3
     # via plotnine
 modin==0.32.0
     # via -r requirements.in
 msgpack==1.1.0
     # via ray
-narwhals==1.32.0
+narwhals==1.36.0
     # via plotly
-numpy==2.2.4
+numpy==2.2.5
     # via
     #   contourpy
     #   dask
@@ -84,7 +84,7 @@ numpy==2.2.4
     #   plotnine
     #   scipy
     #   statsmodels
-packaging==24.2
+packaging==25.0
     # via
     #   dask
     #   fastparquet
@@ -106,15 +106,19 @@ partd==1.4.2
     # via dask
 patsy==1.0.1
     # via statsmodels
-pillow==11.1.0
+pillow==11.2.1
     # via matplotlib
 plotly==6.0.1
     # via -r requirements.in
 plotnine==0.14.5
     # via -r requirements.in
-polars==1.26.0
+polars==1.28.0
+    # via
+    #   -r requirements.in
+    #   polars-cloud
+polars-cloud==0.0.4
     # via -r requirements.in
-protobuf==6.30.1
+protobuf==6.30.2
     # via ray
 psutil==7.0.0
     # via modin
@@ -125,13 +129,13 @@ pyarrow==19.0.1
     #   -r requirements.in
     #   dask
     #   modin
-pydantic==2.10.6
+pydantic==2.11.3
     # via
     #   -r requirements.in
     #   pydantic-settings
-pydantic-core==2.27.2
+pydantic-core==2.33.1
     # via pydantic
-pydantic-settings==2.8.1
+pydantic-settings==2.9.1
     # via -r requirements.in
 pyparsing==3.2.3
     # via matplotlib
@@ -149,7 +153,7 @@ pyyaml==6.0.2
     # via
     #   dask
     #   ray
-ray==2.44.0
+ray==2.44.1
     # via modin
 referencing==0.36.2
     # via
@@ -157,7 +161,7 @@ referencing==0.36.2
     #   jsonschema-specifications
 requests==2.32.3
     # via ray
-rpds-py==0.23.1
+rpds-py==0.24.0
     # via
     #   jsonschema
     #   referencing
@@ -166,7 +170,7 @@ scipy==1.15.2
     #   mizani
     #   plotnine
     #   statsmodels
-setuptools==78.0.2
+setuptools==79.0.1
     # via -r requirements.in
 six==1.17.0
     # via python-dateutil
@@ -176,14 +180,20 @@ toolz==1.0.0
     # via
     #   dask
     #   partd
-typing-extensions==4.12.2
+typing-extensions==4.13.2
     # via
+    #   polars-cloud
     #   pydantic
     #   pydantic-core
     #   referencing
+    #   typing-inspection
+typing-inspection==0.4.0
+    # via
+    #   pydantic
+    #   pydantic-settings
 tzdata==2025.2
     # via pandas
-urllib3==2.3.0
+urllib3==2.4.0
     # via requests
 zipp==3.21.0
     # via importlib-metadata
